fixed top alert for modal so the page doesn't jump

--- a/less/custom/alerts-custom.less
+++ b/less/custom/alerts-custom.less
@@ -16,3 +16,10 @@
 .alert-full {
   border-radius: 0;
 }
+
+.alert-fixed-top {
+	position: fixed !important;
+	top: 0 !important;
+	width: 100% !important;
+	z-index: 9999;
+}
